--- a/BolsaSite/WebApplication1/Web.config
+++ b/BolsaSite/WebApplication1/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="BolsaContext" connectionString="Data Source=DESKTOP-V8IHSTO\SQLEXPRESS; Initial Catalog=Bolsa; Integrated Security=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="BrokerContext" connectionString="Data Source=DESKTOP-V8IHSTO\SQLEXPRESS; Initial Catalog=Bolsa; Integrated Security=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
